deploy/bootstrap/east-ga-atl-m01/heartbeat/dev/heartbeat/heartbeat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartbeat
  namespace: heartbeat
  labels:
    app.kubernetes.io/name: heartbeat
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: heartbeat
  template:
    metadata:
      labels:
        app: heartbeat
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/heartbeat:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            limits:
              cpu: 100m
              memory: 64Mi

---

apiVersion: v1
kind: Service
metadata:
  name: heartbeat
  namespace: heartbeat
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: heartbeat

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: heartbeat-vs
  namespace: heartbeat
spec:
  hosts:
    - "east-ga-atl-m01.cseretail.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/heartbeat"
      route:
        - destination:
            host: heartbeat
            port:
              number: 8080
