deploy/bootstrap/east-ga-atl-m01/heartbeat/dev/heartbeat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heartbeat
  namespace: heartbeat
spec:
  rules:
  - https:
      paths:
      - path: /heartbeat/
        backend:
          serviceName: heartbeat
          servicePort: 8080
